--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,8 +1,8 @@
 {% extends "myapp/base.html" %}
 
-{% block title %}หน้าหลัก - Pongphisut{% endblock %}
+{% block title %}หน้าหลัก - Patthanapong{% endblock %}
 
 {% block content %}
-    <h1 class="display-4 mb-4">Pongphisut Buahom</h1>
+    <h1 class="display-4 mb-4">Patthanapong Lampa</h1>
     {% comment %} <p class="lead">วันที่: {{ current_date }}</p> {% endcomment %}
 {% endblock %}
